--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">BookListing</string>
+    <string name="app_name"> BookListing </string>
+    <string name="Search"> Search </string>
+    <string name="no_books"> No books found. </string>
+    <string name="no_internet_connection"> No internet connection. </string>
+
+    <string name="Search_text"> Write name of the book </string>
+    <string name="q">q</string>
+    <string name="max_results">maxResults</string>
 </resources>
