--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name"> BookListing </string>
     <string name="Search"> Search </string>
-    <string name="no_books"> No books found. </string>
+    <string name="no_books"> No books found , try writing another words </string>
+    <string name="no_search_text"> Write a book name to search for </string>
     <string name="no_internet_connection"> No internet connection. </string>
 
     <string name="Search_text"> Write name of the book </string>
